// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageBlock has the expected html structure 1`] = `
"<div class=\\"tm-page\\">
   <header class=\\"tm-page-header\\">
      <div class=\\"tm-page-header-container\\">
         <div class=\\"tm-page-header-text\\">
            <div class=\\"tm-page-header-title\\">
               <h2>
                  Block #10
               </h2>
</div>
   <div class=\\"tm-page-header-subtitle\\">
      <h3></h3>
</div>
</div>
   <menu class=\\"tm-page-header-menu\\">
      <div>
         <div>
            <div class=\\"tm-tool-bar\\">
               <div class=\\"tm-tool-bar-container\\">
                  <div class=\\"main\\">
                     <a href=\\"#/blocks/9\\" class=\\"\\"><i class=\\"material-icons\\">chevron_left</i></a><a href=\\"#/blocks/11\\" class=\\"\\"><i class=\\"material-icons\\">chevron_right</i></a><a disabled=\\"disabled\\" class=\\"back\\"><i class=\\"material-icons\\">arrow_back</i></a><a class=\\"help\\"><i class=\\"material-icons\\">help_outline</i></a><a class=\\"sign-out\\"><i class=\\"material-icons\\">exit_to_app</i></a>
                  </div>
</div>
</div>
</div>
</div>
</menu>
</div>
</header>
<main class=\\"tm-page-main ps\\">
   <tm-block blockmeta=\\"[object Object]\\" block=\\"[object Object]\\"></tm-block>
   <div class=\\"ps__rail-x\\" style=\\"left: 0px; top: 0px;\\">
      <div class=\\"ps__thumb-x\\" tabindex=\\"0\\" style=\\"left: 0px; width: 0px;\\"></div>
</div>
   <div class=\\"ps__rail-y\\" style=\\"top: 0px; left: 0px;\\">
      <div class=\\"ps__thumb-y\\" tabindex=\\"0\\" style=\\"top: 0px; height: 0px;\\"></div>
</div>
</main>
</div>"
`;

exports[`PageBlock should disable the next block button if last block 1`] = `"<div class=\\"tm-page\\"><header class=\\"tm-page-header\\"><div class=\\"tm-page-header-container\\"><div class=\\"tm-page-header-text\\"><div class=\\"tm-page-header-title\\"><h2>Block #10</h2></div><div class=\\"tm-page-header-subtitle\\"><h3></h3></div></div><menu class=\\"tm-page-header-menu\\"><div></div></menu></div></header><main class=\\"tm-page-main\\"><div class=\\"tm-data-msg\\"><div class=\\"tm-data-msg__icon\\"><i class=\\"material-icons fa-spin\\">rotate_right</i></div><div class=\\"tm-data-msg__text\\"><div class=\\"tm-data-msg__title\\"><div>Data is loading…</div></div><div class=\\"tm-data-msg__subtitle\\"><div>Please wait a moment.</div></div></div></div></main></div>"`;

exports[`PageBlock should show a loading state if loading 1`] = `
"<div class=\\"tm-page\\">
   <header class=\\"tm-page-header\\">
      <div class=\\"tm-page-header-container\\">
         <div class=\\"tm-page-header-text\\">
            <div class=\\"tm-page-header-title\\">
               <h2>
                  Loading...
               </h2>
</div>
   <div class=\\"tm-page-header-subtitle\\">
      <h3></h3>
</div>
</div>
   <menu class=\\"tm-page-header-menu\\">
      <div></div>
</menu>
</div>
</header>
<main class=\\"tm-page-main\\">
   <tm-data-loading></tm-data-loading>
</main>
</div>"
`;
